--- a/prod/Seminar1/HW.ipynb
+++ b/prod/Seminar1/HW.ipynb
@@ -15,7 +15,7 @@
     "\n",
     "In the lecture we count Frobenious norm for Kruskal tensor $||\\hat{Y}|| = [|U V W|] $\n",
     "\n",
-    "Write up Frobenious norm for the difference of two Kruskal tensors $||\\hat{Y} - \\hat{Y}||^2$ in the similar way, if $\\hat{Y} = [|U V W|]$, $\\hat{X} = [|A B C|]$\n",
+    "Write up Frobenious norm for the difference of two Kruskal tensors $||\\hat{Y} - \\hat{X}||^2$ in the similar way, if $\\hat{Y} = [|U V W|]$, $\\hat{X} = [|A B C|]$\n",
     "\n",
     "**Solution**\n",
     "\n",
