--- a/prod/Seminar1/HW_solution.ipynb
+++ b/prod/Seminar1/HW_solution.ipynb
@@ -13,7 +13,7 @@
    "source": [
     "**0.** In the lecture we count Frobenious norm for Kruskal tensor $||\\hat{Y}||$\n",
     "\n",
-    "Write up norm for the difference of two Kruskal tensors $||\\hat{Y} - \\hat{Y}||^2$ in the similar way, if $\\hat{Y} = [|U V W|]$, $\\hat{X} = [|A B C|]$\n",
+    "Write up norm for the difference of two Kruskal tensors $||\\hat{Y} - \\hat{X}||^2$ in the similar way, if $\\hat{Y} = [|U V W|]$, $\\hat{X} = [|A B C|]$\n",
     "\n",
     "**Solution**\n",
     " \n",
