change to pdf and HW

--- a/prod/Seminar1/HW.ipynb
+++ b/prod/Seminar1/HW.ipynb
@@ -93,6 +93,15 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fro_norm = lambda tensor : np.sqrt(np.sum(tensor**2))"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 38,
    "metadata": {},
    "outputs": [],
@@ -108,7 +117,7 @@
     "    B = np.random.random_sample((tensor.shape[1], rank))\n",
     "    C = np.random.random_sample((tensor.shape[2], rank))\n",
     "\n",
-    "    norm_tensor = l2_norm(tensor)\n",
+    "    norm_tensor = fro_norm(tensor)\n",
     "    error = None\n",
     "\n",
     "    for iteration in range(n_iter_max):\n",
